Add zoomed image modal window

--- a/content/ru/projects.json
+++ b/content/ru/projects.json
@@ -127,7 +127,7 @@
       "Разработал систему контейнеризации телеграм-ботов, используя Docker SDK",
       "Разработал систему мониторинга за контейнерами с телеграм-ботами в реальном времени, вшитую в админ панель",
       "Разработал систему управления телеграм-ботами с помощью команд в реальном времени, вшитую в админ панель",
-      "Разработал телеграм чат бота с пользователем внутри админ панели с помощью вебсокетов",
+      "Разработал чат внутри админ панели, позволяющий общаться с пользователем в телеграм от лица бота с помощью вебсокетов",
       "Разработал систему уведомлений менеджера о различных событиях"
     ],
     "devops_features": [
