--- a/content/ru/projects.json
+++ b/content/ru/projects.json
@@ -46,7 +46,7 @@
     "devops_features": [
       "Настроил сервер",
       "Настроил базу данных",
-      "Автоматизировал деплой",
+      "Автоматизировал деплой с помощью github actions",
       "Настроил управление инфраструктурой",
       "Настроил NGINX",
       "Настроил домен и защищенное соединение (SSL)",
@@ -89,7 +89,7 @@
     "devops_features": [
       "Настроил сервер",
       "Настроил базу данных",
-      "Автоматизировал деплой",
+      "Автоматизировал деплой с помощью github actions",
       "Настроил управление инфраструктурой",
       "Настроил NGINX"
     ]
@@ -133,7 +133,7 @@
     "devops_features": [
       "Настроил сервер",
       "Настроил базу данных",
-      "Автоматизировал деплой",
+      "Автоматизировал деплой с помощью github actions",
       "Настроил управление инфраструктурой",
       "Настроил NGINX"
     ]
