--- a/content/ru/projects.json
+++ b/content/ru/projects.json
@@ -254,5 +254,65 @@
       "Помогал членам команды развернуть проект локально"
     ],
     "devops_features": []
+  }, {
+    "title": "Crawly Chronicles",
+    "pictures": "crawly",
+    "stack": [
+      "Unity 2021",
+      "Unity 6",
+      "C# 8.0"
+    ],
+    "duration": "2 месяца",
+    "roles": [
+      "Разработка Игр",
+      "Гейм-дизайн",
+      "Арт-дизайнер",
+      "SFX Дизайнер",
+      "VFX Дизайнер"
+    ],
+    "overview": "Видеоигра в жанре action-survival с интересным твистом. Участник Brackeys GameJam 2023.1, и первая версия была написана с нуля за одну неделю.",
+    "development_features": [
+      "Разработал идею, соответствующую теме соревнования",
+      "Разработал фундаментальный концепт игры и основные её механики",
+      "Создал уникальный визуальный стиль",
+      "Подобрал и создал звуковые эффекты",
+      "Подобрал и создал визуальные эффекты",
+      "Рисовал спрайты и анимации",
+      "Разработал игровой цикл",
+      "Разработал интерфейс пользователя",
+      "Разработал боевую систему, основанную на физике, с механиками парирования, защиты и другими",
+      "Разработал систему дня и ночи",
+      "Разработал систему сложности игры",
+      "Разработал систему навыков персонажа с возможностью создать уникальную сборку для прохождения игрового процесса",
+      "Разработал систему искусственного интеллекта противников, в которую входит поиск пути, стейты, сложные задачи, смены задач и различные уникальные поведения",
+      "Разработал механику сильных противников-боссов, каждый из которых имеет уникальные боевые и поведенческие способности",
+      "Обеспечил возможность выбора двух разных языков интерфейса",
+      "Отловил и починил множество багов"
+    ],
+    "devops_features": []
+  },  {
+    "title": "Другие проекты",
+    "pictures": "other",
+    "stack": [
+      "Unity 2021",
+      "Unity 2023",
+      "Unity 6",
+      "Java SDK"
+    ],
+    "duration": "",
+    "roles": [],
+    "overview": "За свой путь программиста я делал много разных вещей. Мое хобби - разработка видеоигр, и у меня было много проектов. Многие из них не были закончены, многие были забыты, но каждый из них внес свой вклад в мои навыки. Я написал более 100 тысяч строк кода на C#, и благодаря этому научился всем принципам ООП, программированию асинхронных задачач, математическим и физическим вычислениям, алгоритмам, и обрел много других навыков. ",
+    "development_features": [
+      "Работал с различными алгоритмами процедурной генерации мира, такими как комбинированные шума Перлина и Вороного, Коллапс Волновой Функции (WFC)",
+      "Работал с компилятором C# в нативный код, чтобы ускорить тяжелые вычисления в более чем сотню раз",
+      "Работал с такими алгоритмами, как А*, Коллапс Волновой Функции (WFC), Марш Кубов (Cube Marching), рейкастинг, Конструктивная Блочная Геометрия (CSG)",
+      "Работал над системами сохранения / загрузки данных, как в JSON, так и в байтах",
+      "Работал с шейдерами с помощью Unity's Shader Graph",
+      "Работал с освещением и запеканием света",
+      "Работал с физикой: векторами, кватернионами, силами",
+      "Работал с ИИ стейт-автоматами",
+      "Работал с анимациями и аниматорами"
+    ],
+    "devops_features": []
   }
 ]
